--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "natural": "^6.12.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "sentiment": "^5.0.2",
     "superjson": "^2.2.1",
+    "transcrypt": "^3.6.82",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/sentiment": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
